# best_gift_suggester_llm

./: README.md
backend/: lambda_function.py  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/src/: api.ts
frontend/: package-lock.json  package.json
