[tool.poetry]
name = "gifts-suggester-backend"
version = "0.1.0"
description = ""
authors = ["Anatolii Burtsev <ab.canada.world@gmail.com>"]
readme = "README.md"
packages = [{include = "gifts_suggester_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.141"
openai = "^0.27.4"
google-api-python-client = "^2.85.0"
dirtyjson = "^1.0.8"
fastapi = "^0.95.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
